public/css/Layout.css
/*header*/
body {
    margin: 0;
    overflow: auto;
  }
header{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 180%;
    background-image: linear-gradient(to right, rgb(52,250,22),rgb(49,190,31));
    color : white;
    padding : 2%;
    height:8%;
    overflow: hidden;
}

img.logo{
    position:absolute;
    margin-left: 4.5%;
    margin-top : -28px;
    height: 18%;
    width : 14%;
}

a.header2{
    text-decoration: none;
    margin-left: 80%; 
    color : white;
}

.header3{
    background-color: transparent;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 180%;
    border: none;
    margin-top : -47px;
    text-decoration: none;
    margin-left: 90%; 
    color : white;

}

/*Navigation*/

nav{
    margin-top: -25px;
    background-image: linear-gradient(to top, rgb(0,0,0),rgb(90,90,90));
    font-size : 120%;
    padding : 0.5%;
}

ul.nav4 li a {
    text-decoration: none;
    color : white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

ul.nav4 li {
    display : inline-block;
    text-decoration: none;
    margin-left: 6%;
    color :white;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

nav ul.nav4 li ul {
    visibility: hidden;
    position: absolute;
    background-color : rgb(20,20,20) ;
    text-align: start;
}
nav ul.nav4 li:hover > ul {
    visibility:visible;
}


/*Lecture*/

article ul {
    list-style: none;
    
}

article ul.lessons li {
    float: left;
    width: 35%;
    height:80px;
    text-align: center;
    font-size:25px;
    background-image: linear-gradient(to top, rgb(0,0,0),rgb(90,90,90));
    border: 1px solid white;
    padding-top: 40px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border-radius: 20px;
    margin-bottom: 70px;
    margin-left:10px;
    margin-right: 70px;
}
a.lessons{
    color: aliceblue;
    text-decoration: none;
}

/* Left Side*/

article.side{
    float:left;
    position: relative;
    margin-top: -15px;
    width:70%;
    border-right: 1px solid black;
}

h1.side{
    text-align: center;
}



a.Test:hover{
    color: blueviolet;
}



/*Right Side*/
.side{
    float: left;
    margin-top: -15px;
    width: 1200px;
    background-image: none;
    border-right: 1px solid black;
}

article.links{
    float:right;
    width:20%;
}



/*Footer*/

footer{
    position: fixed;
    float:left;
    bottom: 0%;
    width: 100%;
    background-image:linear-gradient(to bottom,rgb(18,18,18),rgb(21,22,21)) ;
    padding-bottom : 1%;
    padding-top: 1.5%;
}

a.f1, a.f2, a.f3{
    text-decoration: none;
    font-family: Arial, Helvetica, sans-serif;
    color : white;
    padding-top : 1%;
    margin-left : 2%;
    
}




/*Lecture  */

p{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 15px;
    font-weight: normal;;
}
p.cr{
    color : gray;
    font-size:80%;
    margin-left:85%;
}


table.CVS td{
    border:solid 1px black;
}


/*img.gitlogo{
    height : 10%;
    width : 13%;
    margin-left : 70%;
    margin-top : -40px
}*/

/* image  and code in lecture*/
figure{
    float: right;
    margin: 0.5%;
    margin-bottom: 1%;
    
}
figcaption {
    
    width: 300px;
    
    
}
img{ 
    float: right;
    width: 300px;
    height: 180px;
}
code {
    border: 1px solid grey;
    
}

